chore: add TODO for adding more colors to .types element

--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ header {
     padding-left: 10px;
 
 }
-
+/*TODO: adding more colors to different types*/
 .type-element {
     margin-right: 10px;
     margin-top: 5px;
